Simplify.